--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext .ts,.tsx",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:server":"json-server server.json -w -d 500"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
@@ -29,6 +30,7 @@
     "eslint": "^8.42.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "json-server": "^0.17.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
